--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "convex": "^1.17.0",
     "convex-helpers": "^0.1.65",
     "date-fns": "^4.1.0",
+    "dom-to-image-more": "^3.7.2",
     "framer-motion": "^11.15.0",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.460.0",
     "nanoid": "^5.0.9",
     "next": "15.0.7",
