--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.4.0",
+    "@google/genai": "^1.39.0",
     "@liveblocks/client": "^2.13.0",
     "@liveblocks/node": "^2.13.0",
     "@liveblocks/react": "^2.13.0",
