--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed:templates": "tsx scripts/seed-templates.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.4.0",
@@ -27,6 +28,7 @@
     "convex-helpers": "^0.1.65",
     "date-fns": "^4.1.0",
     "dom-to-image-more": "^3.7.2",
+    "dotenv": "^17.2.3",
     "framer-motion": "^11.15.0",
     "jspdf": "^4.0.0",
     "lucide-react": "^0.460.0",
@@ -52,6 +54,8 @@
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
